# go-iam-sdk

./: .gitignore  README.md
.github/workflows/: pr-validation-golang.yml  pr-validation-python.yml  pr-validation-react.yml  pr-validation-rust.yml  pr-validation-typescript.yml  publish-python.yml  publish-react.yml  publish-rust.yml  publish-typescript.yml
golang/: .golangci.json  Makefile  README.md  go.mod  service.go  service_impl.go  service_test.go  types.go
python/: .gitignore  __init__.py  pyproject.toml  service.py  service_impl.py  setup.cfg  test_service.py
python/goiam/: models.py
react/: .eslintrc.js  .gitignore  .prettierrc.js  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
react/.github/workflows/: pr-validation-react.yml
react/examples/: README.md  basic-usage.tsx  comprehensive-example.tsx
react/src/: AuthGuard.tsx  client.ts  context.tsx  index.ts  jest-setup.d.ts  setupTests.ts  state.ts  types.ts
react/src/__tests__/: client.test.ts  state.test.ts
rust/: Cargo.toml  Makefile  README.md  justfile
rust/.cargo/: config.toml
rust/src/: error.rs  lib.rs  service.rs  service_impl.rs  service_impl_new.rs  types.rs
typescript/: .eslintrc.json  .prettierignore  .prettierrc.json  Makefile  README.md  index.test.ts  index.ts  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
