[package]
name = "goiam"
version = "0.1.2"
edition = "2021"
authors = ["melvinodsa <melvinodsa@gmail.com>"]
description = "Rust SDK for Go IAM - A lightweight Identity and Access Management server"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/melvinodsa/go-iam-sdk"
repository = "https://github.com/melvinodsa/go-iam-sdk"
keywords = ["iam", "authentication", "authorization", "security", "api"]
categories = ["api-bindings", "authentication", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
base64 = "0.22"
async-trait = "0.1"

[dev-dependencies]
mockito = "1.4"
tokio-test = "0.4"
